--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bulma": "^0.9.3",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4"
   },
